# glfreetype

./: .gitignore  CMakeLists.txt  README.md
include/glfreetype/: TextRenderer.hpp
src/: TextRenderer.cpp
test/: main.cpp
